[project]
name = "1brain-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "clerk-backend-api>=3.3.1",
    "fastapi>=0.118.2",
    "httpx>=0.28.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "structlog>=25.4.0",
    "uvicorn>=0.37.0",
]
